namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins-app
  labels:
    name: jenkins-app
