service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins-app
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: jenkins-service-http
      port: 8080
    - protocol: TCP
      name: jenkins-service-remote-port
      port: 50000
  selector:
    app: jenkins
